Fix to run with only one section - GeneralConfig - FAILED to Launch

--- a/res/langs/vi-VN.json
+++ b/res/langs/vi-VN.json
@@ -1,14 +1,40 @@
 {
-    "DefaultsFileNotFound": "Defaults file not found.",
-    "FailedToParseDefaults": "Failed to parse defaults.",
+    "DefaultsFileNotFound": "Không tìm thấy tệp mặc định.",
+    "FailedToParseDefaults": "Không thể phân tích tệp mặc định.",
+    "GeneralConfig_CPUARM64": "Windows ARM64",
+    "GeneralConfig_CPUArchitectureLabel": "Kiến trúc CPU:",
+    "GeneralConfig_CPUArchitecture_Tooltip": "Chọn kiến trúc CPU cho việc cài đặt.\\n Windows 11 không hỗ trợ x86.",
+    "GeneralConfig_CPUIntelAMD": "Intel/AMD (x64)",
+    "GeneralConfig_Error_CPUArchitecture": "Chọn kiến trúc CPU hợp lệ.",
+    "GeneralConfig_Error_ProductKey": "Vui lòng nhập đầy đủ Product Key hoặc để tất cả các trường trống.",
+    "GeneralConfig_Error_WindowsEdition": "Vui lòng chọn phiên bản Windows hợp lệ.",
+    "GeneralConfig_ExpandCollapse_Tooltip": "Mở rộng/Thu gọn phần này.",
+    "GeneralConfig_Header": "Cấu hình chung",
+    "GeneralConfig_Header_Tooltip": "Cấu hình các thiết lập cài đặt Windows chung.",
+    "GeneralConfig_ProductKeyLabel": "Product Key:",
+    "GeneralConfig_ProductKey_Part_Tooltip": "Nhập 5 ký tự.",
+    "GeneralConfig_ProductKey_Placeholder": "XXXXX",
+    "GeneralConfig_ProductKey_Separator": "-",
+    "GeneralConfig_ProductKey_Tooltip": "Nhập Product Key cho việc cài đặt Windows.",
+    "GeneralConfig_WindowsEditionLabel": "Windows Edition:",
+    "GeneralConfig_WindowsEdition_Tooltip": "Chọn phiên bản Windows để cài đặt.",
+    "GeneralConfig_WindowsEducation": "Windows 11 Education",
+    "GeneralConfig_WindowsEnterprise": "Windows 11 Enterprise",
+    "GeneralConfig_WindowsHome": "Windows 11 Home",
+    "GeneralConfig_WindowsPro": "Windows 11 Pro",
     "MainForm_CancelButton": "Cancel",
+    "MainForm_CancelButton_Tooltip": "Exit the application without saving.",
     "MainForm_ClearButton": "Clear",
+    "MainForm_ClearButton_Tooltip": "Clear all configurations.",
     "MainForm_Error_FailedToApplyPreset": "Failed to apply preset {0}: {1}",
+    "MainForm_Error_FailedToClearConfigs": "Failed to clear configurations: {0}",
     "MainForm_Error_FailedToClearSettings": "Failed to clear settings: {0}",
+    "MainForm_Error_FailedToLoadLastConfigs": "Failed to load last configurations: {0}",
     "MainForm_Error_FailedToLoadLastSettings": "Failed to load last settings: {0}",
     "MainForm_Error_FailedToOpenPreset": "Failed to open preset: {0}",
     "MainForm_Error_FailedToOpenSettings": "Failed to open settings: {0}",
     "MainForm_Error_FailedToRefreshLanguage": "Failed to refresh language: {0}",
+    "MainForm_Error_FailedToSaveConfigs": "Failed to save configurations: {0}",
     "MainForm_Error_FailedToSaveSettings": "Failed to save settings: {0}",
     "MainForm_Error_GenerationFailed": "Generation failed: {0}",
     "MainForm_Error_NoSavePath": "No save path specified in settings: {0}",
@@ -16,12 +42,16 @@
     "MainForm_Error_Title": "Error",
     "MainForm_FormTitle": "QuickWinstall",
     "MainForm_GenerateButton": "Generate",
+    "MainForm_GenerateButton_Tooltip": "Generate the autounattend.xml file.",
     "MainForm_Info_FileSaved": "File saved to: {0}",
     "MainForm_Info_Title": "Success",
     "MainForm_PresetsButton": "Preset",
+    "MainForm_PresetsButton_Tooltip": "Load recommended settings.",
     "MainForm_SettingsButton": "Settings",
+    "MainForm_SettingsButton_Tooltip": "Open application settings.",
     "MainForm_StatusLabel_Ready": "Language packages are missing or corrupted.",
     "MainForm_StatusPrefixLabel": "Status:",
+    "MainForm_Status_AllConfigsCleared": "All configurations cleared.",
     "MainForm_Status_AllSettingsCleared": "All settings cleared.",
     "MainForm_Status_Applied": "Applied",
     "MainForm_Status_Cleared": "Cleared",
@@ -31,11 +61,14 @@
     "MainForm_Status_Error": "Error",
     "MainForm_Status_Failed": "Failed",
     "MainForm_Status_FailedToApplyPreset": "Failed to apply preset: {0}",
+    "MainForm_Status_FailedToClearConfigs": "Failed to clear configurations.",
     "MainForm_Status_FailedToClearSettings": "Failed to clear settings.",
+    "MainForm_Status_FailedToLoadLastConfigs": "Failed to load last configurations.",
     "MainForm_Status_FailedToLoadLastSettings": "Failed to load last settings.",
     "MainForm_Status_FailedToOpenPreset": "Failed to open preset.",
     "MainForm_Status_FailedToOpenSettings": "Failed to open settings.",
     "MainForm_Status_FailedToRefreshLanguage": "Failed to refresh language.",
+    "MainForm_Status_FailedToSaveConfigs": "Failed to save configurations.",
     "MainForm_Status_FailedToSaveSettings": "Failed to save settings.",
     "MainForm_Status_GenerationCancelled": "Generation cancelled.",
     "MainForm_Status_GenerationCompleted": "Generation completed successfully.",
@@ -68,9 +101,85 @@
     "MainForm_Status_unsaved": "unsaved",
     "MainForm_Status_warning": "warning",
     "MainForm_Title": "QuickWinstall",
+    "MainForm_Warning_ClearAllConfigs": "Clear all configurations?",
     "MainForm_Warning_ClearAllSettings": "Clear all settings?",
     "MainForm_Warning_OverwriteFile": "The file autounattend.xml already exists. Overwrite?",
     "MainForm_Warning_PleaseFixError": "Please fix error: {0}",
     "MainForm_Warning_Title": "Warning",
-    "MainForm_Warning_UnsavedChanges": "Leave without saving?"
+    "MainForm_Warning_UnsavedChanges": "Leave without saving?",
+    "PresetForm_Info_NoData": "",
+    "PresetsForm_AddButton": "Add",
+    "PresetsForm_AddButton_Tooltip": "Add a new preset.",
+    "PresetsForm_ApplyButton": "Apply",
+    "PresetsForm_ApplyButton_Tooltip": "Apply the selected preset.",
+    "PresetsForm_Button_Add": "Add",
+    "PresetsForm_Button_Cancel": "Cancel",
+    "PresetsForm_Button_OK": "OK",
+    "PresetsForm_CancelButton": "Cancel",
+    "PresetsForm_CancelButton_Tooltip": "Cancel any changes and close this window.",
+    "PresetsForm_Dialog_ExportPreset": "Export Preset",
+    "PresetsForm_Dialog_ImportPreset": "Import Preset",
+    "PresetsForm_Error_CannotRemoveDefault": "Cannot remove default preset.",
+    "PresetsForm_Error_FailedToApply": "Failed to apply preset '{0}'.",
+    "PresetsForm_Error_FailedToExport": "Failed to export preset.",
+    "PresetsForm_Error_FailedToImport": "Failed to import preset.",
+    "PresetsForm_Error_FailedToRemove": "Failed to remove preset.",
+    "PresetsForm_Error_InvalidPresetName": "Please enter a valid preset name.",
+    "PresetsForm_Error_LoadingPresets": "Error loading presets: {0}",
+    "PresetsForm_Error_Title": "Error",
+    "PresetsForm_ExportButton": "Export",
+    "PresetsForm_ExportButton_Tooltip": "Export the selected preset.",
+    "PresetsForm_ImportButton": "Import",
+    "PresetsForm_ImportButton_Tooltip": "Import a preset from file.",
+    "PresetsForm_InfoLabel": "Info:",
+    "PresetsForm_Info_Author": "Author",
+    "PresetsForm_Info_Description": "Description",
+    "PresetsForm_Info_Name": "Name",
+    "PresetsForm_Info_NoData": "",
+    "PresetsForm_Info_NotImplemented": "Save preset functionality requires integration with MainForm to collect current configuration.",
+    "PresetsForm_Info_Title": "Not Implemented",
+    "PresetsForm_Info_Tooltip": "Preset information and description.",
+    "PresetsForm_Info_Version": "Version",
+    "PresetsForm_Label_PresetInfo": "Preset Information:",
+    "PresetsForm_Label_PresetName": "Preset Name:",
+    "PresetsForm_Label_PresetsList": "Available Presets:",
+    "PresetsForm_ListBox_Tooltip": "Select a preset to apply.",
+    "PresetsForm_PresetsListLabel": "Select a preset:",
+    "PresetsForm_PresetsListLabel_Tooltip": "Presets is a collection of predefined settings\\n that can be applied to quickly\\n configure the application.",
+    "PresetsForm_RemoveButton": "Remove",
+    "PresetsForm_RemoveButton_Tooltip": "Remove the selected preset.",
+    "PresetsForm_Success_ExportedPreset": "Preset exported successfully.",
+    "PresetsForm_Success_ImportedPreset": "Preset imported successfully.",
+    "PresetsForm_Success_Title": "Success",
+    "PresetsForm_Title": "Presets",
+    "PresetsForm_Title_AddPreset": "Add Preset",
+    "PresetsForm_Warning_Overwrite": "Preset already exists. Overwrite?",
+    "PresetsForm_Warning_RemovePreset": "Remove preset '{0}'?",
+    "PresetsForm_Warning_Title": "Warning",
+    "Select": "Select",
+    "SettingsForm_AboutButton": "About",
+    "SettingsForm_AboutButton_Tooltip": "About QuickWinstall",
+    "SettingsForm_BrowseButton": "Browse",
+    "SettingsForm_BrowseButton_Tooltip": "Browse for folder",
+    "SettingsForm_BrowseDialog_Description": "Select Folder to Save XML Files",
+    "SettingsForm_CancelButton": "Cancel",
+    "SettingsForm_CancelButton_Tooltip": "Cancel changes",
+    "SettingsForm_English": "English",
+    "SettingsForm_HelpButton": "Help",
+    "SettingsForm_HelpButton_Tooltip": "Open help documentation",
+    "SettingsForm_LanguageLabel": "Language:",
+    "SettingsForm_LanguageLabel_Tooltip": "Application language DOES NOT affect Windows UI Language.",
+    "SettingsForm_SaveButton": "Save",
+    "SettingsForm_SaveButton_Tooltip": "Save settings",
+    "SettingsForm_SavePathLabel": "XML Save Path:",
+    "SettingsForm_SavePathLabel_Tooltip": "Select save path for autounattend.xml file.",
+    "SettingsForm_SavePathTextBox_Tooltip": "Enter the XML save path.",
+    "SettingsForm_ThemeDark": "Dark",
+    "SettingsForm_ThemeLabel": "Theme:",
+    "SettingsForm_ThemeLabel_Tooltip": "Select application theme.",
+    "SettingsForm_ThemeLight": "Light",
+    "SettingsForm_Theme_Dark": "Dark",
+    "SettingsForm_Theme_Light": "Light",
+    "SettingsForm_Title": "Settings",
+    "SettingsForm_Vietnamese": "Tiếng Việt"
 }
